syntax = "proto3";

package service;
option csharp_namespace = "Test.CsharpNamespace";

import "data/master_data.proto";
import "service/common.proto";

service System {
    rpc Ping (SystemPingRequest) returns (SystemPingResponse);
    rpc Signup (SystemSignupRequest) returns (SystemSignupResponse);
    rpc Login (SystemLoginRequest) returns (SystemLoginResponse);
}

enum Platform {
    Other = 0;
    iOS = 1;
    Android = 2;
}

message SystemPingRequest {}

message SystemPingResponse {
    int64 tick = 10;
    string database_time = 20;
}

message SystemSignupRequest {
    string challenge = 10;
    string response = 20;
    string adid = 30;
    Platform platform = 40;
    string version = 50;
    uint32 initial_hero_id = 60;
}

message SystemSignupResponse {
    CommonResponseData common = 1;
    string session_id = 10;
    string game_token = 20;
}

message SystemLoginRequest {
    string adid = 10;
    string game_token = 20;
    Platform platform = 30;
    string version = 40;
}

message SystemLoginResponse {
    CommonResponseData common = 1;
    string session_id = 10;
    repeated data.RewardData reward = 20;
    RequestTransferResponse transfer = 30;
    repeated data.LoadingMessageData loading_messages = 40;
}

message RequestTransferResponse {
    CommonResponseData common = 1;
    string player_code = 10;
    string transfer_code = 20;
    int64 expire_time = 30;
}
