using Google.Protobuf;

namespace Test.CsharpNamespace
{
    
    public sealed partial class RequestTransferResponse : IMessage<RequestTransferResponse>
    {

    }
    
    public sealed partial class SystemLoginRequest : IMessage<SystemLoginRequest>
    {

    }
    
    public sealed partial class SystemLoginResponse : IMessage<SystemLoginResponse>
    {

    }
    
    public sealed partial class SystemPingRequest : IMessage<SystemPingRequest>
    {

    }
    
    public sealed partial class SystemPingResponse : IMessage<SystemPingResponse>
    {

    }
    
    public sealed partial class SystemSignupRequest : IMessage<SystemSignupRequest>
    {

    }
    
    public sealed partial class SystemSignupResponse : IMessage<SystemSignupResponse>
    {

    }
    
}